<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Netify</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="song_dialog_play">Play</string>
    <string name="song_dialog_add">Add song</string>
    <string name="song_dialog_cancel">Cancel</string>
    <string name="youtube_search_box">What are you looking for?</string>
    <string name="youtube_search_button">Search</string>
    <string name="youtube_player_failed">Failed to initialize Youtube Player</string>
    <string name="login_button">Log in</string>
    <string name="logout">Logout</string>
    <string name="register_button">Register</string>
    <string name="or_label">-- or --</string>
    <string name="email">e-mail</string>
    <string name="email_missing">Your e-mail is missing</string>
    <string name="password">password</string>
    <string name="password_missing">Your password is missing</string>
    <string name="confirm_password">confirm password</string>
    <string name="password_confirmation_missing">Password confirmation is missing</string>
    <string name="password_confirmation_mismatch">Password confirmation does not match</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="display_name">Display name</string>
    <string name="proposition_list_header">What\'s next</string>
    <string name="video_added_by">Added by</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_home">Home</string>
    <string name="title_mygroups">My groups</string>
    <string name="title_addgroup">Add new group</string>
    <string name="title_searchgroup">Find groups</string>
    <string name="title_groupactivity">Group graph</string>
    <string name="title_youtubesearchactivity">Find songs</string>
    <string name="my_groups">My groups</string>
    <string name="group_name">Group name</string>
    <string name="add_group_name">Add group name</string>
    <string name="group_genre">Genre (pop, heavy metal, etc.)</string>
    <string name="group_description">Add group description</string>
    <string name="add_first_song">Add your first song</string>
    <string name="radio_public_text">Public group</string>
    <string name="radio_private_text">Private group</string>
    <string name="no_song_added">No song added</string>
    <string name="no_groups_found">No groups have been found</string>
    <string name="search_results">Search results</string>
    <string name="no_user_groups_info">You don\'t have any groups yet.\nFind some groups you like and join them\n or create your own!</string>
    <string name="no_user_friends_info">You don\'t have any friends yet.\nFind some users you know and send them friend request!</string>
    <string name="action_joingroup">Join</string>
    <string name="join_to_add_songs_info">Join the group to add your own songs.</string>
    <string name="join_group_successful">You have successfully joined this group.</string>
    <string name="no_friends_found">No friends have been found</string>
    <string name="title_searchusers">Find users</string>
    <string name="title_friends">Friends</string>
    <string name="action_sendrequest">Send request</string>
    <string name="title_profile">Profile</string>
    <string name="title_groups">Groups</string>
    <string name="no_user_invites_info">You don\'t have any invites.</string>
    <string name="title_invites">Invitations</string>
    <string name="add_friend_successful">You are now friends with</string>
    <string name="invite_deleted">You rejected the invite</string>
    <string name="new_invite_friend">has sent you a friend request!</string>
    <string name="friend_invitation">You have been invited to friends.</string>
    <string name="group_invitation">You have been invited to join group</string>
    <string name="group_members_header">Group members</string>
    <string name="change_group_status">Change group status</string>
    <string name="invite_user_button">Invite a friend</string>
    <string name="group_playlist_button">View group playlist</string>
    <string name="join_group_button">Join group</string>
    <string name="leave_group_button">Leave group</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="group_status_changed">Group status has been changed</string>
    <string name="select_friends">Select friends</string>
    <string name="invite_button">Invite</string>
    <string name="invites_sent">Your invite has been sent</string>
    <string name="remove_members">Remove members</string>
    <string name="remove">Remove</string>
    <string name="users_removed">Users has been removed from the group</string>
    <string name="songs_added_recently">Songs added recently</string>
    <string name="unfriend_button">Remove from friends</string>
    <string name="personal_info">Personal details</string>
    <string name="already_invited_info">You have already invited this user.</string>
    <string name="friendship_destroyed">You removed user from your friends</string>
    <string name="has_invited_you_info">The user has invited you.</string>
    <string name="video_added_in">Added in</string>
    <string name="accept_button">Accept</string>
    <string name="delete_button">Delete</string>
    <string name="no_friends_to_add_info">There are no friends to add.</string>
    <string name="title_about">About</string>

</resources>
