<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background" android:padding="10dp">

    <EditText
        android:id="@+id/groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style"
        android:hint="@string/group_name"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/groupGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupName"
        android:background="@drawable/edittext_style"
        android:layout_marginTop="10dp"
        android:hint="@string/group_genre"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/groupDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style"
        android:layout_below="@+id/groupGenre"
        android:hint="@string/group_description"
        android:inputType="textMultiLine"
        android:lines="3"
        android:gravity="top|left"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/groupDescription"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/radioPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_public_text"
            android:checked="true"

        />
        <RadioButton
            android:id="@+id/radioPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_private_text"
            />
        </RadioGroup>


    <Button
        android:id="@+id/addFirstSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/dark_blue"
        android:text="@string/add_first_song"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_action_new"/>

    <LinearLayout
        android:id="@+id/firstSongPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addFirstSong"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/noSongLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/light_gray">
            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_action_picture"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/noSongInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageIcon"
                android:textColor="@color/white"
                android:textSize="10dp"
                android:text="@string/no_song_added"
                />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/songAddedLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:visibility="gone"
            >
            <ImageView
                android:id="@+id/firstSongThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/light_gray"/>

            <ImageButton
                android:id="@+id/removeSongButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:src="@drawable/ic_action_remove"
                android:background="@color/light_gray"
                android:alpha="0.7"
                />
            <TextView
                android:id="@+id/firstSongTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="5dp"
                android:textSize="10dp"
                android:textColor="@color/white"
                android:background="@color/light_gray"
                android:alpha="0.8"/>


            </FrameLayout>

        </LinearLayout>


    <Button
        android:id="@+id/addGroupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstSongPreview"
        android:layout_marginTop="10dp"
        android:background="@color/dark_blue"
        android:text="@string/title_addgroup"
        android:textColor="@color/white"/>
</RelativeLayout>
</ScrollView>