<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/netifygraph"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15dp">
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:background="@color/dark_blue"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/orLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_label"
            android:layout_margin="10dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:background="@color/dark_blue"
            android:textColor="@color/white"/>

        </LinearLayout>

</RelativeLayout>
</ScrollView>