<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:animateLayoutChanges="true"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/youtube_search_box"
            android:singleLine="true"
            android:background="@drawable/edittext_style"
            android:layout_marginRight="5dp"
            />
        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_action_search"
            android:background="@color/dark_blue"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchResultsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchLayout"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/searchResultsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:textColor="@color/white"
            android:text="@string/search_results"
            android:gravity="center"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/noResultsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:gravity="center"
            android:text="@string/no_groups_found"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/groupList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        </LinearLayout>


</RelativeLayout>